--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,17 @@ img {
   display: block;
   max-width: 100%;
 }
+
+[data-start],
+[data-stop] {
+  position: absolute;
+  padding: 10px;
+}
+[data-start] {
+  top: 50%;
+  left: 45%;
+}
+[data-stop] {
+  top: 50%;
+  left: 50%;
+}
