--- a/src/css/common.css
+++ b/src/css/common.css
@@ -29,3 +29,18 @@ img {
   top: 50%;
   left: 50%;
 }
+input {
+  margin-left: 30px;
+}
+.timer{
+  display: flex;
+  flex-direction: row;
+}
+.field{
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+.value{
+  font-size: 40px;
+}
