--- a/src/css/common.css
+++ b/src/css/common.css
@@ -19,8 +19,9 @@ img {
 
 .btn {
   background-color: #fff;
-  padding: 10px;
+  padding: 8px;
   border-radius: 8px;
+  margin-left: 10px;
 }
 .datetime-picker {
   margin-left: 30px;
